--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
 </script>
 
   <!-- Modules -->
-  <script src="./node_modules/jquery/dist/jquery.js"></script>
-  <script src="./node_modules/handlebars/dist/handlebars.js"></script>
-  <script src="./node_modules/sammy/lib/sammy.js"></script>
-  <script src="./node_modules/sammy/lib/plugins/sammy.handlebars.js"></script>
+  <script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sammy@0.7.6/lib/sammy.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sammy@0.7.6/lib/plugins/sammy.handlebars.min.js"></script>
 
   <!-- Scripts -->
   <script src="./scripts/app.js" type="module"></script>
