--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   <!-- Modules -->
   <script src="./node_modules/jquery/dist/jquery.js"></script>
   <script src="./node_modules/handlebars/dist/handlebars.js"></script>
-  <script src="./node_modules/sammy/lib/sammy.js"></script>
-  <script src="./node_modules/sammy/lib/plugins/sammy.handlebars.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sammy@0.7.6/lib/sammy.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sammy@0.7.6/lib/plugins/sammy.handlebars.min.js"></script>
 
   <!-- Scripts -->
   <script src="./scripts/app.js" type="module"></script>
